ENH:add chinese translation
Change-Id: Id2d238e3e2918229c88dd986ed41848ea932abcf

--- a/bbl/i18n/BambuStudio.pot
+++ b/bbl/i18n/BambuStudio.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-06 14:23+0800\n"
+"POT-Creation-Date: 2022-12-08 20:42+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1132,7 +1132,7 @@ msgstr ""
 msgid "No printer"
 msgstr ""
 
-msgid "Heat the nozzle to target temperature"
+msgid "Heat the nozzle"
 msgstr ""
 
 msgid "Cut filament"
@@ -1322,7 +1322,7 @@ msgid "Sending print configuration"
 msgstr ""
 
 #, possible-c-format, possible-boost-format
-msgid "Successfully sent. Will automatically jump to the device page in %s s"
+msgid "Successfully sent. Will automatically jump to the device page in %ss"
 msgstr ""
 
 msgid "An SD card needs to be inserted before printing via LAN."
@@ -1533,8 +1533,8 @@ msgid "AMS auto switch filament"
 msgstr ""
 
 msgid ""
-"AMS switches to the same type of filament automatically when the current "
-"filament runs out."
+"AMS will continue to another spool with the same properties of filament "
+"automatically when current filament runs out"
 msgstr ""
 
 msgid "File"
@@ -2055,9 +2055,6 @@ msgstr ""
 msgid "Flushed"
 msgstr ""
 
-msgid "Tower"
-msgstr ""
-
 msgid "Total"
 msgstr ""
 
@@ -2325,19 +2322,16 @@ msgstr ""
 msgid "Calibrating"
 msgstr ""
 
-msgid "Timelapse"
+msgid "Auto-record Monitoring"
 msgstr ""
 
-msgid "Monitoring Recording"
-msgstr ""
-
-msgid "Virtual Camera"
+msgid "Go Live"
 msgstr ""
 
 msgid "Resolution"
 msgstr ""
 
-msgid "Show 'Streaming Video' guide page."
+msgid "Show \"Live Video\" guide page."
 msgstr ""
 
 msgid "720p"
@@ -2817,6 +2811,9 @@ msgstr ""
 msgid "Show all files, recent first."
 msgstr ""
 
+msgid "Timelapse"
+msgstr ""
+
 msgid "Switch to timelapse files."
 msgstr ""
 
@@ -2914,6 +2911,9 @@ msgid "SD Card"
 msgstr ""
 
 msgid "SD Card Abnormal"
+msgstr ""
+
+msgid "Virtual Camera"
 msgstr ""
 
 msgid "Camera Setting"
@@ -3485,6 +3485,9 @@ msgstr ""
 msgid "Invalid data"
 msgstr ""
 
+msgid "Slicing Canceled"
+msgstr ""
+
 #, possible-c-format, possible-boost-format
 msgid "Slicing Plate %d"
 msgstr ""
@@ -3512,7 +3515,8 @@ msgstr ""
 
 msgid ""
 "Failed to save the project.\n"
-"Please check whether the project file is opened by other programs."
+"Please check whether the folder exists online or if other programs open the "
+"project file."
 msgstr ""
 
 msgid "Save project"
@@ -3640,6 +3644,14 @@ msgstr ""
 
 #, possible-boost-format
 msgid "Triangles: %1%\n"
+msgstr ""
+
+msgid "Tips:"
+msgstr ""
+
+msgid ""
+"\"Fix Model\" feature is currently only on Windows. Please repair the model "
+"on Bambu Studio(windows) or CAD softwares."
 msgstr ""
 
 #, possible-c-format, possible-boost-format
@@ -4143,6 +4155,9 @@ msgid "The printer is required to be in the same LAN as Bambu Studio."
 msgstr ""
 
 msgid "The printer does not support sending to printer SD card."
+msgstr ""
+
+msgid "Same as global bed type"
 msgstr ""
 
 msgid "Cool Plate"
@@ -7085,6 +7100,12 @@ msgid "Slice the plates: 0-all plates, i-plate i, others-invalid"
 msgstr ""
 
 msgid "Show command help."
+msgstr ""
+
+msgid "UpToDate"
+msgstr ""
+
+msgid "Update the configs values of 3mf to latest."
 msgstr ""
 
 msgid "Output Model Info"
