--- a/bbl/i18n/de/BambuStudio_de.po
+++ b/bbl/i18n/de/BambuStudio_de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-06 14:23+0800\n"
+"POT-Creation-Date: 2022-12-08 20:42+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1175,7 +1175,7 @@ msgstr ""
 msgid "No printer"
 msgstr "Kein Drucker"
 
-msgid "Heat the nozzle to target temperature"
+msgid "Heat the nozzle"
 msgstr ""
 
 msgid "Cut filament"
@@ -1389,7 +1389,7 @@ msgid "Sending print configuration"
 msgstr "Druckkonfiguration senden"
 
 #, c-format, boost-format
-msgid "Successfully sent. Will automatically jump to the device page in %s s"
+msgid "Successfully sent. Will automatically jump to the device page in %ss"
 msgstr ""
 
 msgid "An SD card needs to be inserted before printing via LAN."
@@ -1618,8 +1618,8 @@ msgid "AMS auto switch filament"
 msgstr ""
 
 msgid ""
-"AMS switches to the same type of filament automatically when the current "
-"filament runs out."
+"AMS will continue to another spool with the same properties of filament "
+"automatically when current filament runs out"
 msgstr ""
 
 msgid "File"
@@ -2211,9 +2211,6 @@ msgstr "Genutztes Filament"
 msgid "Flushed"
 msgstr ""
 
-msgid "Tower"
-msgstr ""
-
 msgid "Total"
 msgstr "Gesamt"
 
@@ -2483,19 +2480,16 @@ msgstr ""
 msgid "Calibrating"
 msgstr "Kalibrieren"
 
-msgid "Timelapse"
-msgstr "Zeitraffer"
+msgid "Auto-record Monitoring"
+msgstr ""
 
-msgid "Monitoring Recording"
-msgstr "Überwachung der Aufzeichnung"
-
-msgid "Virtual Camera"
+msgid "Go Live"
 msgstr ""
 
 msgid "Resolution"
 msgstr "Auflösung"
 
-msgid "Show 'Streaming Video' guide page."
+msgid "Show \"Live Video\" guide page."
 msgstr ""
 
 msgid "720p"
@@ -2978,6 +2972,9 @@ msgstr ""
 msgid "Show all files, recent first."
 msgstr ""
 
+msgid "Timelapse"
+msgstr "Zeitraffer"
+
 msgid "Switch to timelapse files."
 msgstr ""
 
@@ -3075,6 +3072,9 @@ msgid "SD Card"
 msgstr ""
 
 msgid "SD Card Abnormal"
+msgstr ""
+
+msgid "Virtual Camera"
 msgstr ""
 
 msgid "Camera Setting"
@@ -3659,6 +3659,9 @@ msgstr "Warnungen"
 msgid "Invalid data"
 msgstr "Ungültige Daten"
 
+msgid "Slicing Canceled"
+msgstr ""
+
 #, c-format, boost-format
 msgid "Slicing Plate %d"
 msgstr "Slicen der Druckplatte %d"
@@ -3688,7 +3691,8 @@ msgstr "Projekt laden"
 
 msgid ""
 "Failed to save the project.\n"
-"Please check whether the project file is opened by other programs."
+"Please check whether the folder exists online or if other programs open the "
+"project file."
 msgstr ""
 
 msgid "Save project"
@@ -3824,6 +3828,14 @@ msgstr "Volumen: %1% mm³\n"
 #, boost-format
 msgid "Triangles: %1%\n"
 msgstr "Dreiecke: %1%\n"
+
+msgid "Tips:"
+msgstr ""
+
+msgid ""
+"\"Fix Model\" feature is currently only on Windows. Please repair the model "
+"on Bambu Studio(windows) or CAD softwares."
+msgstr ""
 
 #, c-format, boost-format
 msgid "Plate %d: %s does not support filament %s (%s).\n"
@@ -4353,6 +4365,9 @@ msgid "The printer is required to be in the same LAN as Bambu Studio."
 msgstr ""
 
 msgid "The printer does not support sending to printer SD card."
+msgstr ""
+
+msgid "Same as global bed type"
 msgstr ""
 
 msgid "Cool Plate"
@@ -7647,6 +7662,12 @@ msgstr ""
 msgid "Show command help."
 msgstr "Befehlshilfe anzeigen."
 
+msgid "UpToDate"
+msgstr ""
+
+msgid "Update the configs values of 3mf to latest."
+msgstr ""
+
 msgid "Output Model Info"
 msgstr "Ausgabe Modellinformationen"
 
@@ -7976,6 +7997,9 @@ msgid ""
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
 msgstr ""
+
+#~ msgid "Monitoring Recording"
+#~ msgstr "Überwachung der Aufzeichnung"
 
 #~ msgid "Tree support with infill"
 #~ msgstr "Baumsupport mit Füllung"
