--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-06 14:23+0800\n"
+"POT-Creation-Date: 2022-12-08 20:42+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1170,7 +1170,7 @@ msgstr ""
 msgid "No printer"
 msgstr "Sin impresión"
 
-msgid "Heat the nozzle to target temperature"
+msgid "Heat the nozzle"
 msgstr ""
 
 msgid "Cut filament"
@@ -1386,7 +1386,7 @@ msgid "Sending print configuration"
 msgstr "Enviando la configuración de impresión"
 
 #, c-format, boost-format
-msgid "Successfully sent. Will automatically jump to the device page in %s s"
+msgid "Successfully sent. Will automatically jump to the device page in %ss"
 msgstr ""
 
 msgid "An SD card needs to be inserted before printing via LAN."
@@ -1615,8 +1615,8 @@ msgid "AMS auto switch filament"
 msgstr ""
 
 msgid ""
-"AMS switches to the same type of filament automatically when the current "
-"filament runs out."
+"AMS will continue to another spool with the same properties of filament "
+"automatically when current filament runs out"
 msgstr ""
 
 msgid "File"
@@ -2209,9 +2209,6 @@ msgstr "Filamento usado"
 msgid "Flushed"
 msgstr ""
 
-msgid "Tower"
-msgstr ""
-
 msgid "Total"
 msgstr "Total"
 
@@ -2482,19 +2479,16 @@ msgstr ""
 msgid "Calibrating"
 msgstr "Calibrando"
 
-msgid "Timelapse"
-msgstr "Timelapse"
+msgid "Auto-record Monitoring"
+msgstr ""
 
-msgid "Monitoring Recording"
-msgstr "Monitoreo de grabación"
-
-msgid "Virtual Camera"
+msgid "Go Live"
 msgstr ""
 
 msgid "Resolution"
 msgstr "Resolución"
 
-msgid "Show 'Streaming Video' guide page."
+msgid "Show \"Live Video\" guide page."
 msgstr ""
 
 msgid "720p"
@@ -2976,6 +2970,9 @@ msgstr ""
 msgid "Show all files, recent first."
 msgstr ""
 
+msgid "Timelapse"
+msgstr "Timelapse"
+
 msgid "Switch to timelapse files."
 msgstr ""
 
@@ -3073,6 +3070,9 @@ msgid "SD Card"
 msgstr ""
 
 msgid "SD Card Abnormal"
+msgstr ""
+
+msgid "Virtual Camera"
 msgstr ""
 
 msgid "Camera Setting"
@@ -3660,6 +3660,9 @@ msgstr "advertencias"
 msgid "Invalid data"
 msgstr "Datos inválidos"
 
+msgid "Slicing Canceled"
+msgstr ""
+
 #, c-format, boost-format
 msgid "Slicing Plate %d"
 msgstr "Placa de corte %d"
@@ -3689,7 +3692,8 @@ msgstr "Carga de Proyecto"
 
 msgid ""
 "Failed to save the project.\n"
-"Please check whether the project file is opened by other programs."
+"Please check whether the folder exists online or if other programs open the "
+"project file."
 msgstr ""
 
 msgid "Save project"
@@ -3825,6 +3829,14 @@ msgstr "Volumen: %1% mm³\n"
 #, boost-format
 msgid "Triangles: %1%\n"
 msgstr " Triángulos: %1%\n"
+
+msgid "Tips:"
+msgstr ""
+
+msgid ""
+"\"Fix Model\" feature is currently only on Windows. Please repair the model "
+"on Bambu Studio(windows) or CAD softwares."
+msgstr ""
 
 #, c-format, boost-format
 msgid "Plate %d: %s does not support filament %s (%s).\n"
@@ -4351,6 +4363,9 @@ msgid "The printer is required to be in the same LAN as Bambu Studio."
 msgstr ""
 
 msgid "The printer does not support sending to printer SD card."
+msgstr ""
+
+msgid "Same as global bed type"
 msgstr ""
 
 msgid "Cool Plate"
@@ -7635,6 +7650,12 @@ msgstr "Cortar las placas: 0-todas las placas, i-placa i, otras-inválidas"
 msgid "Show command help."
 msgstr "Mostrar la ayuda del comando."
 
+msgid "UpToDate"
+msgstr ""
+
+msgid "Update the configs values of 3mf to latest."
+msgstr ""
+
 msgid "Output Model Info"
 msgstr "Información del modelo de salida"
 
@@ -7962,6 +7983,9 @@ msgid ""
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
 msgstr ""
+
+#~ msgid "Monitoring Recording"
+#~ msgstr "Monitoreo de grabación"
 
 #~ msgid "Tree support with infill"
 #~ msgstr "Soporte para árboles con relleno"
