--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-06 14:23+0800\n"
+"POT-Creation-Date: 2022-12-08 20:42+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1167,8 +1167,8 @@ msgstr ""
 msgid "No printer"
 msgstr "Nincs nyomtató"
 
-msgid "Heat the nozzle to target temperature"
-msgstr "Fúvóka felmelegítése a kívánt hőmérsékletre"
+msgid "Heat the nozzle"
+msgstr ""
 
 msgid "Cut filament"
 msgstr "Filament vágása"
@@ -1381,9 +1381,8 @@ msgid "Sending print configuration"
 msgstr "Nyomtatási konfiguráció küldése"
 
 #, c-format, boost-format
-msgid "Successfully sent. Will automatically jump to the device page in %s s"
+msgid "Successfully sent. Will automatically jump to the device page in %ss"
 msgstr ""
-"Sikeresen elküldve. Az eszköz oldala automatikusan megjelenik %s mp belül"
 
 msgid "An SD card needs to be inserted before printing via LAN."
 msgstr "A LAN-on keresztüli nyomtatáshoz helyezz be egy SD kártyát."
@@ -1621,8 +1620,8 @@ msgid "AMS auto switch filament"
 msgstr ""
 
 msgid ""
-"AMS switches to the same type of filament automatically when the current "
-"filament runs out."
+"AMS will continue to another spool with the same properties of filament "
+"automatically when current filament runs out"
 msgstr ""
 
 msgid "File"
@@ -2205,9 +2204,6 @@ msgstr "Használt filament"
 msgid "Flushed"
 msgstr ""
 
-msgid "Tower"
-msgstr ""
-
 msgid "Total"
 msgstr "Összesen"
 
@@ -2482,19 +2478,16 @@ msgstr "Befejezve"
 msgid "Calibrating"
 msgstr "Kalibrálás"
 
-msgid "Timelapse"
-msgstr "Timelapse"
+msgid "Auto-record Monitoring"
+msgstr ""
 
-msgid "Monitoring Recording"
-msgstr "Felvétel monitorozása"
-
-msgid "Virtual Camera"
+msgid "Go Live"
 msgstr ""
 
 msgid "Resolution"
 msgstr "Felbontás"
 
-msgid "Show 'Streaming Video' guide page."
+msgid "Show \"Live Video\" guide page."
 msgstr ""
 
 msgid "720p"
@@ -2981,6 +2974,9 @@ msgstr ""
 msgid "Show all files, recent first."
 msgstr ""
 
+msgid "Timelapse"
+msgstr "Timelapse"
+
 msgid "Switch to timelapse files."
 msgstr ""
 
@@ -3078,6 +3074,9 @@ msgid "SD Card"
 msgstr ""
 
 msgid "SD Card Abnormal"
+msgstr ""
+
+msgid "Virtual Camera"
 msgstr ""
 
 msgid "Camera Setting"
@@ -3659,6 +3658,9 @@ msgstr "figyelmeztetések"
 msgid "Invalid data"
 msgstr "Érvénytelen adat"
 
+msgid "Slicing Canceled"
+msgstr ""
+
 #, c-format, boost-format
 msgid "Slicing Plate %d"
 msgstr "%d tálca szeletelése"
@@ -3690,7 +3692,8 @@ msgstr "Projekt betöltése"
 
 msgid ""
 "Failed to save the project.\n"
-"Please check whether the project file is opened by other programs."
+"Please check whether the folder exists online or if other programs open the "
+"project file."
 msgstr ""
 
 msgid "Save project"
@@ -3825,6 +3828,14 @@ msgstr "Térfogat: %1% mm³\n"
 #, boost-format
 msgid "Triangles: %1%\n"
 msgstr "Háromszögek: %1%\n"
+
+msgid "Tips:"
+msgstr ""
+
+msgid ""
+"\"Fix Model\" feature is currently only on Windows. Please repair the model "
+"on Bambu Studio(windows) or CAD softwares."
+msgstr ""
 
 #, c-format, boost-format
 msgid "Plate %d: %s does not support filament %s (%s).\n"
@@ -4348,6 +4359,9 @@ msgid "The printer is required to be in the same LAN as Bambu Studio."
 msgstr ""
 
 msgid "The printer does not support sending to printer SD card."
+msgstr ""
+
+msgid "Same as global bed type"
 msgstr ""
 
 msgid "Cool Plate"
@@ -7622,6 +7636,12 @@ msgstr "Tálcák szeletelése: 0 - összes tálca, i - i tálca, egyéb - érvé
 msgid "Show command help."
 msgstr "Parancs súgó megjelenítése."
 
+msgid "UpToDate"
+msgstr ""
+
+msgid "Update the configs values of 3mf to latest."
+msgstr ""
+
 msgid "Output Model Info"
 msgstr "Kimeneti modell információ"
 
@@ -7947,6 +7967,18 @@ msgid ""
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
 msgstr ""
+
+#~ msgid "Heat the nozzle to target temperature"
+#~ msgstr "Fúvóka felmelegítése a kívánt hőmérsékletre"
+
+#, c-format, boost-format
+#~ msgid ""
+#~ "Successfully sent. Will automatically jump to the device page in %s s"
+#~ msgstr ""
+#~ "Sikeresen elküldve. Az eszköz oldala automatikusan megjelenik %s mp belül"
+
+#~ msgid "Monitoring Recording"
+#~ msgstr "Felvétel monitorozása"
 
 #~ msgid "Tree support with infill"
 #~ msgstr "Fa támasz kitöltéssel"
