--- a/bbl/i18n/BambuStudio.pot
+++ b/bbl/i18n/BambuStudio.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-12 11:13+0800\n"
+"POT-Creation-Date: 2022-12-13 20:02+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -502,7 +502,7 @@ msgstr ""
 msgid "Choose one file (3mf):"
 msgstr ""
 
-msgid "Choose one or more files (3mf/step/stl/obj/amf):"
+msgid "Choose one or more files (3mf/step/stl/svg/obj/amf):"
 msgstr ""
 
 msgid "Choose one file (gcode/.gco/.g/.ngc/ngc):"
@@ -1347,6 +1347,9 @@ msgstr ""
 msgid "An SD card needs to be inserted before sending to printer."
 msgstr ""
 
+msgid "Please log out and login to the printer again."
+msgstr ""
+
 msgid "Downloading"
 msgstr ""
 
@@ -1356,7 +1359,7 @@ msgstr ""
 msgid "Cancelled"
 msgstr ""
 
-msgid "Finish"
+msgid "Install successfully."
 msgstr ""
 
 msgid "Installing"
@@ -2519,7 +2522,7 @@ msgstr ""
 msgid "Save current project as"
 msgstr ""
 
-msgid "Import 3MF/STL/STEP/OBJ/AMF"
+msgid "Import 3MF/STL/STEP/SVG/OBJ/AMF"
 msgstr ""
 
 msgid "Load a model"
@@ -2919,9 +2922,6 @@ msgstr ""
 msgid "SD Card"
 msgstr ""
 
-msgid "Virtual Camera"
-msgstr ""
-
 msgid "Camera Setting"
 msgstr ""
 
@@ -2952,10 +2952,10 @@ msgstr ""
 msgid "Lamp"
 msgstr ""
 
-msgid "Part Cooling"
+msgid "Aux"
 msgstr ""
 
-msgid "Aux Cooling"
+msgid "Cham"
 msgstr ""
 
 msgid "Bed"
@@ -4121,6 +4121,9 @@ msgid ""
 "updated."
 msgstr ""
 
+msgid "Cannot send the print job for empty plate"
+msgstr ""
+
 msgid "Errors"
 msgstr ""
 
@@ -4661,10 +4664,10 @@ msgstr ""
 msgid "The configuration is up to date."
 msgstr ""
 
-msgid "Auto-Calc"
+msgid "Flushing volumes for filament change"
 msgstr ""
 
-msgid "Flushing volumes for filament change"
+msgid "Auto-Calc"
 msgstr ""
 
 msgid "Flushing volume (mm³) for each filament pair."
@@ -5746,12 +5749,11 @@ msgid "Internal bridge support thickness"
 msgstr ""
 
 msgid ""
-"When sparse infill density is low, the internal solid infill or internal "
-"bridge may have no archor at the end of line. This cause falling and bad "
-"quality when printing internal solid infill. When enable this feature, loop "
-"paths will be added to the sparse fill of the lower layers for specific "
-"thickness, so that better archor can be provided for internal bridge. 0 "
-"means disable this feature"
+"If enabled, Studio will generate support loops under the contours of "
+"internal bridges.These support loops could prevent internal bridges from "
+"extruding over the air and improve the top surface quality, especially when "
+"the sparse infill density is low.This value determines the thickness of the "
+"support loops. 0 means disable this feature"
 msgstr ""
 
 msgid "Top surface pattern"
